# passcheck

./: .gitignore  README.md  common_words.txt  conftest.py  password_checker.py  pyproject.toml
passcheck/: __init__.py  cli.py  core.py
tests/: test_password_checker.py
